<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.wilterson.premiere.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/strDescLogo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingTop="35dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strHintEmail"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:layout_marginBottom="25dp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strHintSenha"
            android:id="@+id/etPass"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/strLostPasswd"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBtnLogin"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:id="@+id/btnLogin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNewAccount"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>


</LinearLayout>